# lib/api-spec/openapi.yaml
@@ -311,6 +311,8 @@ components:
         status:
           type: string
           enum: [pending, processing, completed, failed]
+        jobName:
+          type: ["string", "null"]
         inputFilename:
           type: string
         inputDurationMinutes:
@@ -348,6 +350,8 @@ components:
         type:
           type: string
           enum: [transcription, subtitling, captioning, dubbing]
+        jobName:
+          type: string
         inputFilename:
           type: string
         inputDurationMinutes:
